--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,13 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image-page: url("../images/cover-image-dark.png");
+  --primary: #ff0070;
+  --secondary: #db00ff;
+  --tertiary: rgba(255, 0, 112, 0.4);
+  --text-primary: #ff0070;
+  --text-secondary: #f1b2ce;
+  --text-tertiary: #000028;
+  --text-content: 'REC';
+  --display-vision: block;
 }
