--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,25 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image-page: url("../images/cover-image-light.png");
+  --primary: #ff8dcb;
+  --secondary: #ffc2e6;
+  --tertiary: #353430;
+  --text-primary: #353430;
+  --text-secondary: #353430;
+  --text-tertiary: #353430;
+  --display-vision: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-image-page: url("../images/cover-image-light.png");
+    --primary: #ff8dcb;
+    --secondary: #ffc2e6;
+    --tertiary: #353430;
+    --text-primary: #353430;
+    --text-secondary: #353430;
+    --text-tertiary: #353430;
+    --display-vision: none;
+  }
 }
