--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,264 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  font-family: var(--main-font), sans-serif;
+  font-weight: var(--weight-font-regular);
+  font-size: var(--main-font-size);
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--background-image-page);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 20px;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(3, 33.3%);
+  block-size: 100%;
+
+  &::before {
+    content: var(--text-content);
+    display: var(--display-vision);
+    position: absolute;
+    top: 3px;
+    right: 28px;
+    color: var(--text-primary);
+  }
+}
+
+.header::after,
+.footer::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid var(--text-primary);
+  border-left: 1px solid var(--text-primary);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.header__theme-menu::after,
+.footer::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-top: 1px solid var(--text-primary);
+  border-right: 1px solid var(--text-primary);
+  color: var(--text-primary);
+  inline-size: 25px;
+  block-size: 25px;
+  z-index: 2;
+}
+
+.header__theme-menu::before {
+  content: "";
+  display: var(--display-vision);
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+  color: var(--text-primary);
+  background-color: var(--primary);
+  inline-size: 8px;
+  block-size: 8px;
+  z-index: 2;
+  box-shadow: 0 0 4px 2px var(--primary);
+}
+
+.header__theme-menu {
+  display: flex;
+  block-size: min-content;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 10px;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 1.5px 13px;
+  color: var(--tertiary);
+  font-size: 18px;
+  line-height: 100%;
+  background-color: transparent;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--tertiary);
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid var(--tertiary);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--tertiary);
+}
+
+.title-decor {
+  color: var(--text-tertiary);
+  background-color: var(--primary);
+}
+
+.header__theme-title {
+  align-self: center;
+  color: var(--secondary);
+  font-weight: var(--weight-font-bold);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--primary);
+  block-size: min-content;
+}
+
+.header__theme-text {
+  justify-self: flex-end;
+  align-self: center;
+  font-weight: var(--weight-font-bold);
+  line-height: 130%;
+  inline-size: 100%;
+  max-inline-size: 500px;
+  block-size: min-content;
+}
+
+
+
+.main-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.main-section-title {
+  color: var(--text-primary);
+  font-size: var(--main-font-size);
+}
+
+.main-section-list {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  margin: 0;
+  list-style: none;
+}
+
+.main-section-item {
+  inline-size: 100%;
+}
+
+.main-content-text {
+  color: var(--text-secondary);
+}
+
+.main-section-what {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content-what {
+  gap: 20px;
+  padding: 0  ;
+  list-style: none;
+}
+
+.main-section-item-title {
+  font-weight: var(--weight-font-regular);
+}
+
+.grid-3-columns {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.main-section-image-container {
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.image-size-100 {
+  object-fit: cover;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.image-sunset {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 1;
+}
+
+.image-books {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.image-ice-cream {
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 2;
+}
+
+.image-street {
+  grid-column: 2 / span 2;
+  grid-row: 3 / span 1;
+}
+
+.image-tape {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 2;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 100%;
+  block-size: 100vh;
+  position: relative;
+}
+
+.footer-title {
+  color: var(--secondary);
+  text-shadow: 4px 4px 0 var(--primary);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+}
+
+@media (height >= 1024px) {
+  .header,
+  .footer {
+    min-block-size: 1024px;
+  }
+}
+
+@media (height >= 768px) {
+  .header,
+  .footer {
+    min-block-size: 768px;
+  }
+}
+
+@media (height >= 668px) {
+  .header,
+  .footer {
+    min-block-size: 668px;
+  }
+}
+
+@media (width >= 1024px) {
+
+}
+
+@media (width >= 768px) and (width < 1024px) {
+
+  .main-section-item-what {
+    grid-column: 1 / span 3;
+  }
+
 }
