--- a/styles/style.css
+++ b/styles/style.css
@@ -10,21 +10,23 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  padding: 20px;
+  padding: 0;
+  margin: 0;
 }
 
 .header {
   position: relative;
   display: grid;
-  grid-template-rows: repeat(3, 33.3%);
-  block-size: 100%;
+  grid-template-rows: repeat(3, 1fr);
+  min-block-size:100vh;
+  gap: 10px;
 
   &::before {
     content: var(--text-content);
-    display: var(--display-vision);
     position: absolute;
-    top: 3px;
-    right: 28px;
+    top: 23px;
+    right: 48px;
+    display: var(--display-vision);
     color: var(--text-primary);
   }
 }
@@ -33,8 +35,8 @@
 .footer::before {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 20px;
+  left: 20px;
   border-bottom: 1px solid var(--text-primary);
   border-left: 1px solid var(--text-primary);
   inline-size: 25px;
@@ -45,43 +47,44 @@
 .footer::after {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 20px;
+  right: 20px;
+  z-index: 2;
   border-top: 1px solid var(--text-primary);
   border-right: 1px solid var(--text-primary);
   color: var(--text-primary);
   inline-size: 25px;
   block-size: 25px;
-  z-index: 2;
 }
 
 .header__theme-menu::before {
   content: "";
-  display: var(--display-vision);
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 28px;
+  right: 28px;
+  z-index: 2;
+  display: var(--display-vision);
   border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--primary);
   color: var(--text-primary);
   background-color: var(--primary);
   inline-size: 8px;
   block-size: 8px;
-  z-index: 2;
-  box-shadow: 0 0 4px 2px var(--primary);
 }
 
 .header__theme-menu {
   display: flex;
-  block-size: min-content;
-  align-items: flex-start;
   justify-content: center;
+  align-items: flex-start;
+  block-size: min-content;
+  padding-top: 20px;
 }
 
 .header__theme-menu-list {
   display: flex;
+  gap: 10px;
   margin: 0;
   padding: 0;
-  gap: 10px;
   list-style: none;
 }
 
@@ -92,6 +95,7 @@
   font-size: 18px;
   line-height: 100%;
   background-color: transparent;
+  text-transform: lowercase;
 }
 
 .header__theme-menu-button:hover {
@@ -113,26 +117,31 @@
 }
 
 .header__theme-title {
-  align-self: center;
   color: var(--secondary);
   font-weight: var(--weight-font-bold);
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 83%;
+  letter-spacing: 10px;
   text-shadow: 4px 4px 0 var(--primary);
   block-size: min-content;
+  word-spacing: 40px;
 }
 
 .header__theme-text {
   justify-self: flex-end;
-  align-self: center;
   font-weight: var(--weight-font-bold);
   line-height: 130%;
-  inline-size: 100%;
-  max-inline-size: 500px;
+  inline-size: 50%;
+  max-inline-size: 491px;
   block-size: min-content;
+  margin: 0 20px 0 0;
+
 }
 
-
+.main,
+.footer {
+  margin-top: 60px;
+}
 
 .main-section {
   display: grid;
@@ -164,9 +173,13 @@
   flex-direction: column;
 }
 
+.padding-top-80 {
+  padding-top: 80px;
+}
+
 .main-content-what {
   gap: 20px;
-  padding: 0  ;
+  padding: 0;
   list-style: none;
 }
 
@@ -174,7 +187,7 @@
   font-weight: var(--weight-font-regular);
 }
 
-.grid-3-columns {
+.grid-columns {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -216,18 +229,18 @@
 }
 
 .footer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   inline-size: 100%;
   block-size: 100vh;
-  position: relative;
 }
 
 .footer-title {
   color: var(--secondary);
-  text-shadow: 4px 4px 0 var(--primary);
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  text-shadow: 4px 4px 0 var(--primary);
 }
 
 @media (height >= 1024px) {
@@ -251,14 +264,24 @@
   }
 }
 
-@media (width >= 1024px) {
-
-}
-
 @media (width >= 768px) and (width < 1024px) {
-
   .main-section-item-what {
     grid-column: 1 / span 3;
   }
 
+  .main-section-item-what {
+    grid-column: 1 / 4;
+  }
+}
+
+@media (width <= 768px) and (width >= 668px) {
+  .main-section-item-what {
+    grid-column: 1 / span 3;
+  }
+  .footer-title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+  .header__theme-title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
 }
