--- a/styles/style.css
+++ b/styles/style.css
@@ -151,6 +151,7 @@
 .main-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .main-section-title {
@@ -161,7 +162,10 @@
 }
 
 .main-content-title {
+  font-size: var(--main-font-size);
+  font-weight: var(--weight-font-bold);
   margin: 0;
+  line-height: 130%;
 }
 
 .main-section-list {
@@ -170,6 +174,7 @@
   grid-column-start: 2;
   grid-column-end: 4;
   margin: 0;
+  padding: 0;
   gap: 20px;
   list-style: none;
 }
@@ -180,7 +185,9 @@
 
 .main-content-text {
   color: var(--text-secondary);
-  margin: 10px 0;
+  inline-size: 100%;
+  line-height: 130%;
+  margin: 10px 0 0 0;
 }
 
 .padding-top-80 {
@@ -195,6 +202,7 @@
   grid-column: 1 / span 3;
   gap: 20px;
   padding: 0;
+  margin: 0;
   list-style: none;
 }
 
