--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  margin: 0;
+  padding: 0;
   font-family: var(--main-font), sans-serif;
   font-weight: var(--weight-font-regular);
   font-size: var(--main-font-size);
@@ -10,16 +12,14 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  padding: 0;
-  margin: 0;
 }
 
 .header {
   position: relative;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  block-size:100vh;
   gap: 10px;
+  block-size: 100vh;
 }
 
 .header::before {
@@ -76,17 +76,17 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  block-size: min-content;
   padding-top: 20px;
+  block-size: min-content;
 }
 
 .header__theme-menu-list {
   display: flex;
   gap: 12px;
-  min-inline-size: 225px;
   margin: 0;
   padding: 0;
   list-style: none;
+  min-inline-size: 225px;
 }
 
 .header__theme-menu-button {
@@ -96,9 +96,9 @@
   font-size: 18px;
   line-height: 100%;
   letter-spacing: 1px;
-  background-color: transparent;
   text-align: center;
   text-transform: lowercase;
+  background-color: transparent;
 }
 
 .header__theme-menu-button:hover {
@@ -125,18 +125,16 @@
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 83%;
   text-shadow: 4px 4px 0 var(--primary);
-  block-size: min-content;
 }
 
 .header__theme-text {
   justify-self: flex-end;
+  margin: 0 20px 0 0;
   font-weight: var(--weight-font-bold);
   line-height: 130%;
   inline-size: 50%;
   max-inline-size: 491px;
   block-size: min-content;
-  margin: 0 20px 0 0;
-
 }
 
 .main,
@@ -155,16 +153,16 @@
 }
 
 .main-section-title {
+  margin: 0;
   color: var(--text-primary);
   font-size: var(--main-font-size);
   inline-size: 100%;
-  margin: 0;
 }
 
 .main-content-title {
-  font-size: var(--main-font-size);
-  font-weight: var(--weight-font-bold);
   margin: 0;
+  font-weight: var(--weight-font-bold);
+  font-size: var(--main-font-size);
   line-height: 130%;
 }
 
@@ -173,9 +171,9 @@
   flex-direction: column;
   grid-column-start: 2;
   grid-column-end: 4;
+  gap: 20px;
   margin: 0;
   padding: 0;
-  gap: 20px;
   list-style: none;
 }
 
@@ -184,10 +182,10 @@
 }
 
 .main-content-text {
-  color: var(--text-secondary);
-  inline-size: 100%;
-  line-height: 130%;
   margin: 10px 0 0 0;
+  color: var(--text-secondary);
+  line-height: 130%;
+  inline-size: 100%;
 }
 
 .padding-top-80 {
@@ -201,8 +199,8 @@
 .main-content-what {
   grid-column: 1 / span 3;
   gap: 20px;
-  padding: 0;
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -213,12 +211,13 @@
 .grid-columns {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .main-section-image-container {
   grid-column: 1 / span 3;
-  block-size: 142vh;
   gap: 20px;
+  block-size: 142vh;
 }
 
 .image-section-title {
@@ -271,41 +270,118 @@
   text-shadow: 4px 4px 0 var(--primary);
 }
 
-@media (height >= 1024px) {
-  .header,
-  .footer {
-    min-block-size: 1024px;
-  }
+.header,
+.footer {
+  min-block-size: 100vh;
 }
 
-@media (height >= 768px) {
-  .header,
-  .footer {
-    min-block-size: 768px;
+@media (width < 1024px) {
+  .header__theme-title {
+    block-size: 100%;
   }
-}
 
-@media (height >= 668px) {
-  .header,
-  .footer {
-    min-block-size: 668px;
+  .header__theme-menu {
+    justify-content: end;
+    align-items: center;
+    padding-top: 70px;
+    block-size: 100%;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding-right: 21px;
   }
 }
 
 @media (width >= 768px) and (width < 1024px) {
+  .header {
+    gap: 0;
+  }
+
+  .header__theme-title {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
+
   .main-section-item-what {
     grid-column: 1 / span 3;
+  }
+
+  .main-section-image-container {
+    block-size: 80vh;
+  }
+
+  .main-content-text {
+    max-inline-size: 472px;
+  }
+
+  .header__theme-text {
+    max-width: 364px;
+    margin-top: 40px;
+  }
+
+  .main-content-text {
+    max-inline-size: 100%;
   }
 }
 
-@media (width <= 768px) and (width >= 668px) {
+@media (width < 768px) and (width >= 375px) {
+  .header {
+    gap: 0;
+    padding: 0 10px;
+  }
+
+  .header__theme-menu {
+    padding-top: 32px;
+  }
+
+  .header__theme-menu-list {
+    padding-right: 0;
+  }
+
+  .header::before {
+    top: 13px;
+    right: 38px;
+  }
+
+  .header::after,
+  .footer::before {
+    bottom: 10px;
+    left: 10px;
+  }
+
+  .header__theme-menu::after,
+  .footer::after {
+    top: 10px;
+    right: 10px;
+  }
+
+  .header__theme-menu::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .header__theme-title {
+    margin: 56px 0;
+  }
+
+  .header__theme-text {
+    margin: 0;
+    min-inline-size: 100%;
+  }
+
   .main-section-item-what {
     grid-column: 1 / span 3;
   }
-  .footer-title {
+
+  .header__theme-title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
-  .header__theme-title {
+
+  .footer-title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
