Изменен порядок подключения css, удалены неиспользуеммые стили, прогнаны через претиер

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,6 +15,6 @@
   --text-primary: #ff0070;
   --text-secondary: #f1b2ce;
   --text-tertiary: #000028;
-  --text-content: 'REC';
+  --text-content: "REC";
   --display-vision: block;
 }
