--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,6 +9,7 @@
   --weight-font-regular: 400;
   --main-font-size: 18px;
   --background-image-page: url("../images/cover-image-dark.png");
+  --background-color: #000028;
   --primary: #ff0070;
   --secondary: #db00ff;
   --tertiary: rgba(255, 0, 112, 0.4);
