--- a/styles/light.css
+++ b/styles/light.css
@@ -6,9 +6,10 @@
 
 :root.theme-light {
   --background-image-page: url("../images/cover-image-light.png");
+  --background-color: #fff1f7;
   --primary: #ff8dcb;
   --secondary: #ffc2e6;
-  --tertiary: #353430;
+  --tertiary: rgba(50, 49, 45, 0.4);
   --text-primary: #353430;
   --text-secondary: #353430;
   --text-tertiary: #353430;
@@ -18,6 +19,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --background-image-page: url("../images/cover-image-light.png");
+    --background-color: #fff1f7;
     --primary: #ff8dcb;
     --secondary: #ffc2e6;
     --tertiary: #353430;
