центрирование body, текст во всю ширину блока, поправлены цвета

--- a/styles/light.css
+++ b/styles/light.css
@@ -22,7 +22,7 @@
     --background-color: #fff1f7;
     --primary: #ff8dcb;
     --secondary: #ffc2e6;
-    --tertiary: #353430;
+    --tertiary: rgba(50, 49, 45, 0.4);
     --text-primary: #353430;
     --text-secondary: #353430;
     --text-tertiary: #353430;
